# RigNet

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  compile_commands.json  main.cpp  test.cpp  testMain.cpp
data/: iisdef.def  mysqltest.json  setting.json  sql_test.txt  test.txt
deprecated/: RigNet.cpp  RigNet.h  RigNetModule.cpp  RigNetModule.h
include/: HeaderPrecompilation.h  ModuleBase.h  NICard.h  NICard_s.h  ProjectUtility.h  RigNet.h  SimensPLC.h  Svandex.h  User.h  config.h  iisutl.h  precomp.h  sub_test.h  tvutility.h
include/CppWindowsService/: MySQLService.h
include/IISModule/: RigNetModule.h  mymodule.h  mymodulefactory.h  precomp.h
include/RigNetService/: RigNetService.h  ServiceBase.h
include/iismysql/: iismysqlpp.h  iisxdevapi.h
include/iistvmgt/: iistvmgt.h
include/mysqlmodule/: xdevapimodule.h
module/ModuleMediaManagement/: CMakeLists.txt  ModuleMediaManagement.cpp  ModuleMediaManagement.h  iistvmda.cpp  iistvmda.h  main.cpp
module/ModuleMySQL/: CMakeLists.txt
module/ModuleSQLite/: CMakeLists.txt  ModuleSQLite.cpp  ModuleSQLite.h  iissqlite.h  main.cpp
module/ModuleStaffManagement/: CMakeLists.txt  ModuleStaffManagement.cpp  ModuleStaffManagement.h  iistvmgt.cpp  iistvmgt.h  main.cpp
ngx_module/: .ycm_extra_conf.py  TvNetConf.hpp  TvNetHandler.hpp  config
service/example/: CMakeLists.txt  RigNetService.cpp  ServiceBase.cpp
src/: HeaderPrecompilation.cpp  ModuleBase.cpp  NICard.cpp  NICard_s.cpp  ProjectUtility.cpp  RigNet.cpp  SimensPLC.cpp  Svandex.cpp  User.cpp  iisutl.cpp  precomp.cpp  sub_test.cpp
src/CppWindowsService/: CppWindowsService.cpp  MySQLService.cpp  SampleService.cpp
src/Devices/: NICard_s.cpp
src/IISModule/: ReqLMod.cpp  RigNetMain.cpp  RigNetModule.cpp  globalmodule.cpp  main.cpp  mymodule.cpp
src/RigNetService/: CppWindowsService.cpp  RigNetService.cpp
src/iismysql/: iismysqlpp.cpp  iisxdevapi.cpp
src/iissqlite/: iissqlite.cpp  main.cpp
src/iistvmda/: iistvmda.cpp  main.cpp
src/iistvmgt/: iistvmgt.cpp
src/mysqlmodule/: main.cpp  mysqlmodulec.cpp
tool/: ModuleManagement.ps1  SendHttpToSever.bat  test.bat
